
	Fixed duplicated filetype entries in vifminfo.  Thanks to aleksejrs.

	Fixed switching views via :wincmd.  Thanks to fogine.

	Fixed executing commands on new view after switching it (related to
	sequences of commands separated via bar symbol).

	Fixed --with-dyn-x11 configuration option, which failed to enable dynamic
	use of the library.  Thanks to Badalisc and Hendrik Jaeger (a.k.a. henk).

0.8.1-beta to 0.8.1

	Added summary to builtin tree implementation.  Thanks to aleksejrs.

	Added more filetype definitions into sample vifmrc.  Thanks to aleksejrs.

	Added 'title' option to control whether title of terminal should be set.
	Enabled by default if old title can be restored.  Thanks to Svyatoslav
	Mishyn (a.k.a. juef).

	Case insensitive completion of autocommand name for :autocmd command.

	Allow /**/ in :autocmd pattern to match end of the path.  Thanks to
	aleksejrs.

	Don't trigger DirEnter on exiting custom-view (when we technically stay in
	the same directory).  Thanks to aleksejrs.

	Somewhat align options in conflict resolution dialog.  Patch by Svyatoslav
	Mishyn (a.k.a. juef).

	Copy timestamps and permissions on merging directories.  Thanks to
	willemw12.

	Less blinking on resorting.  Annoying if directory is resorted from
	autocommand.

	Fixed reopening controlling terminal across users.  Thanks to aleksejrs.

	Fixed :autocmd being not whole line command (was terminated by |).  Thanks
	to aleksejrs.

	Fixed possible crash on writing vifminfo file on exiting.

	Fixed memory corruption on handling empty matches of searches in view
	mode.  Thanks to filterfalse.

	Fixed secondary column of very custom view (%U).  Thanks to filterfalse.

	Fixed reopening terminal for output, read-only mode somehow caused hangs.
	Thanks to aleksejrs.

	Fixed possible (effectively) hang on reading directory change events.

	Fixed parsing of commands which names are not followed by spaces with
	regard to pipe symbols (|).  Thanks to aleksejrs.
