@@ -43,6 +43,9 @@
 	Fixed --with-dyn-x11 configuration option, which failed to enable dynamic
 	use of the library.  Thanks to Badalisc and Hendrik Jaeger (a.k.a. henk).
 
+	Fixed handling of doubled commas on reading/writing filetypes from/to
+	vifminfo.
+
 0.8.1-beta to 0.8.1
 
 	Added summary to builtin tree implementation.  Thanks to aleksejrs.
